同一機器IDで解析チャレンジする処理(WIP)、並べ替え関数の追加等

--- a/func.ipynb
+++ b/func.ipynb
@@ -2,17 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "id": "7755eef2-0b41-4dd8-a991-3ded54da6dfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------14860897515557354735\n",
+      "---------------------------17175495576854533085\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
-    "# シールIDに使っている文字列をランダムに並び替えるテーブル\n",
+    "# シールIDに使っている文字列をランダムに置き換えるテーブル（N進数変換）\n",
     "BASE_TABLE = [\"F\",\"S\",\"L\",\"G\",\"J\",\"X\",\"R\",\"K\",\"C\",\"I\",\"Q\",\"Z\",\"V\",\"A\",\"M\",\"W\",\"U\",\"N\",\"T\",\"B\",\"E\",\"H\",\"P\",\"O\",\"Y\",\"D\"]\n",
+    "N = len(BASE_TABLE)\n",
     "\n",
-    "# 26進数(英字)表記を10進数に変換\n",
+    "# 文字列を並べ替えるためのテーブル\n",
+    "# unshuffled[i] = shuffled[INDEX_TABLE[i]]\n",
+    "INDEX_TABLE_20 = [0, 13, 9, 7, 12, 16, 6, 8, 11, 17, 3, 2, 10, 1, 19, 14, 18, 4, 5, 15]\n",
+    "\n",
+    "\n",
+    "# チェックサムを計算する関数\n",
+    "def get_checksum(string):\n",
+    "    checksum = 0\n",
+    "    for l in string:\n",
+    "        checksum += int(l)\n",
+    "    return checksum\n",
+    "\n",
+    "\n",
+    "# N進数表記を10進数に変換\n",
     "def id_to_decimal(src):\n",
     "    # 下の桁から計算したいので文字列を逆順にする\n",
     "    reverse_src = ''.join(list(reversed(src)))\n",
@@ -20,9 +43,47 @@
     "    dst = 0\n",
     "    count = 0\n",
     "    for letter in reverse_src:\n",
-    "        dst += BASE_TABLE.index(letter) * len(BASE_TABLE) ** count\n",
+    "        dst += BASE_TABLE.index(letter) * N ** count\n",
     "        count += 1\n",
     "    return dst\n",
+    "\n",
+    "# 10進数をN進数に変換\n",
+    "def decimal_to_id(src):\n",
+    "    dst = \"\"\n",
+    "    while src:\n",
+    "        dst = BASE_TABLE[src % N] + dst\n",
+    "        src //= N\n",
+    "    return dst\n",
+    "\n",
+    "# BASE_TABLEの内容をランダムに使って文字列を生成する\n",
+    "def create_random_basetable_str(length):\n",
+    "    return \"\".join([BASE_TABLE[random.randrange(len(BASE_TABLE))] for length in range(length)])\n",
+    "\n",
+    "\n",
+    "# 数列並べ替え\n",
+    "def shuffle_index(unshuffled_str,index_table):\n",
+    "    shuffled_str = \"\"\n",
+    "    shuffled_list = [\"\"] * len(unshuffled_str)\n",
+    "    index = 0\n",
+    "    for i in [x for x in list(unshuffled_str)]:\n",
+    "        shuffled_list[index_table[index]] = i\n",
+    "        index += 1\n",
+    "    for i in shuffled_list:\n",
+    "        shuffled_str = shuffled_str + i\n",
+    "    return shuffled_str\n",
+    "\n",
+    "# 並べ替えを元に戻す\n",
+    "def unshuffle_index(shuffled_str, index_table):\n",
+    "    unshuffled_str = \"\"\n",
+    "    unshuffled_list = [\"\"] * len(shuffled_str)\n",
+    "    index = 0\n",
+    "    for i in [x for x in list(shuffled_str)]:\n",
+    "        unshuffled_list[index_table.index(index)] = i\n",
+    "        index += 1\n",
+    "    for i in unshuffled_list:\n",
+    "        unshuffled_str = unshuffled_str + i\n",
+    "    return unshuffled_str\n",
+    "\n",
     "\n",
     "# 存在するシールIDかどうかのチェック関数\n",
     "def is_exist_seal_id(id):\n",
@@ -51,12 +112,16 @@
     "    # 次の5文字が機器IDかどうか\n",
     "\n",
     "    # 全部OKならシールID判定\n",
-    "    return True\n",
-    "\n",
-    "# BASE_TABLEの内容をランダムに使って文字列を生成する\n",
-    "def create_random_basetable_str(length):\n",
-    "    return \"\".join([BASE_TABLE[random.randrange(len(BASE_TABLE))] for length in range(length)])"
+    "    return True\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94c9a435-1b29-4919-bb63-09cd49a313c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
