チェックサムが指定した桁数d以上になったら超えた分を捨てる

--- a/func.ipynb
+++ b/func.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "id": "7755eef2-0b41-4dd8-a991-3ded54da6dfc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------14860897515557354735\n",
-      "---------------------------17175495576854533085\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -27,33 +18,35 @@
     "INDEX_TABLE_20 = [0, 13, 9, 7, 12, 16, 6, 8, 11, 17, 3, 2, 10, 1, 19, 14, 18, 4, 5, 15]\n",
     "\n",
     "\n",
-    "# チェックサムを計算する関数\n",
-    "def get_checksum(string):\n",
+    "# チェックサムを計算する関数(digit桁を超える場合は下digit桁だけ返す)\n",
+    "def get_checksum(string, digit=2):\n",
     "    checksum = 0\n",
     "    for l in string:\n",
     "        checksum += int(l)\n",
+    "    if checksum >= 10 ** digit:\n",
+    "        checksum = str(checksum)[-digit:]\n",
     "    return checksum\n",
     "\n",
     "\n",
     "# N進数表記を10進数に変換\n",
-    "def id_to_decimal(src):\n",
+    "def id_to_decimal(src_int):\n",
     "    # 下の桁から計算したいので文字列を逆順にする\n",
-    "    reverse_src = ''.join(list(reversed(src)))\n",
+    "    reverse_src = ''.join(list(reversed(src_int)))\n",
     "    \n",
-    "    dst = 0\n",
+    "    dst_int = 0\n",
     "    count = 0\n",
     "    for letter in reverse_src:\n",
-    "        dst += BASE_TABLE.index(letter) * N ** count\n",
+    "        dst_int += BASE_TABLE.index(letter) * N ** count\n",
     "        count += 1\n",
-    "    return dst\n",
+    "    return dst_int\n",
     "\n",
     "# 10進数をN進数に変換\n",
-    "def decimal_to_id(src):\n",
-    "    dst = \"\"\n",
-    "    while src:\n",
-    "        dst = BASE_TABLE[src % N] + dst\n",
-    "        src //= N\n",
-    "    return dst\n",
+    "def decimal_to_id(src_int):\n",
+    "    dst_int = \"\"\n",
+    "    while src_int:\n",
+    "        dst_int = BASE_TABLE[src_int % N] + dst_int\n",
+    "        src_int //= N\n",
+    "    return dst_int\n",
     "\n",
     "# BASE_TABLEの内容をランダムに使って文字列を生成する\n",
     "def create_random_basetable_str(length):\n",
@@ -61,7 +54,7 @@
     "\n",
     "\n",
     "# 数列並べ替え\n",
-    "def shuffle_index(unshuffled_str,index_table):\n",
+    "def shuffle_index(unshuffled_str, index_table):\n",
     "    shuffled_str = \"\"\n",
     "    shuffled_list = [\"\"] * len(unshuffled_str)\n",
     "    index = 0\n",
@@ -75,7 +68,7 @@
     "# 並べ替えを元に戻す\n",
     "def unshuffle_index(shuffled_str, index_table):\n",
     "    unshuffled_str = \"\"\n",
-    "    unshuffled_list = [\"\"] * len(shuffled_str)\n",
+    "    unshuffled_list = [\"\"] * len(index_table)\n",
     "    index = 0\n",
     "    for i in [x for x in list(shuffled_str)]:\n",
     "        unshuffled_list[index_table.index(index)] = i\n",
